--- a/Lists.html
+++ b/Lists.html
@@ -91,9 +91,9 @@
 
 다시 모든 글을 다 공개. 일자리는 나눠 갖는게 좋은걸까? 독점하는게 좋은걸까???
 
-Open source 가 좋은걸까? Closed 로 대가를 조금이라도 받고 지식을 주는게 나은걸까??? 우선은 다 open 을 할 예정... 그동안 공개하지 않고 독점하려고 했던 것들까지... 지식은 공유하면 더 발전하긴 하는듯... Open source 가 이런 매력이구만. 그런데 open source 가 문제가 아니고, Source 의 중요한 부분을 잘 설명하는 문서작성이 더 중요한 부분 같기도.
+Open source 가 좋은걸까? Closed 로 대가를 조금이라도 받고 지식을 주는게 나은걸까??? 우선은 다 open 을 할 예정... 그동안 공개하지 않고 독점하려고 했던 것들까지... 지식은 공유하면 더 발전하긴 하는듯... Open source 가 이런 매력이구만. 그런데 open source 가 문제가 아니고, Source 의 중요한 부분을 잘 설명하는 문서작성이 더 중요한거 같기도.
 
-취직이 안되면... 내 가격을 낮춰서라도 어딘가 찾을데는 있겄지. 우선 빠르게 <a target="_blank" href="http://recoeve.net/">recoeve.net</a> 를 완성하고 싶음. 내 가치관과 비슷한 사람들과 우선 더 잘 뭉쳐야겠음.</div>
+</div>
 
 <div class="cmt">
 
@@ -159,6 +159,7 @@ Fuzzy search 갤s 에서는 textarea 로 바꿔야 제대로 돌아가는듯?
 
 <ul>
 <li><a target="_blank" href="http://kipid.tistory.com/entry/Two-track-stragedy-%EC%96%91-%EB%B0%A9%ED%96%A5-%EC%A0%84%EB%9E%B5">Two track stragedy (양 방향 전략)</a> Many track stragedy 로도 확장이 가능할듯?, 2015-12-24</li>
+<li><a target="_blank" href="http://kipid.tistory.com/entry/%EB%AC%B8%EC%9E%AC%EC%9D%B8-2012-%EB%8C%80%ED%86%B5%EB%A0%B9-%EC%B6%9C%EB%A7%88-%EC%84%A0%EC%96%B8-%EB%B6%88%EB%B9%84%EB%B6%88%EB%AA%85%E4%B8%8D%E9%A3%9B%E4%B8%8D%E9%B3%B4">문재인 2012 대통령 출마 선언: 불비불명(不飛不鳴)</a>, 2015-12-23</li>
 <li><a target="_blank" href="http://kipid.tistory.com/entry/%ED%99%94%EC%84%B1%EC%8B%9C-%EC%B6%95%EA%B5%AC%EC%9E%A5-%ED%99%94%EC%84%B1-%EC%A2%85%ED%95%A9-%EA%B2%BD%EA%B8%B0-%ED%83%80%EC%9A%B4-%EC%A3%BC%EB%B3%80-%EB%AA%A8%EC%8A%B5%EB%93%A4">화성시 축구장 (화성 종합 경기 타운) 주변 모습들</a>, 2015-12-23</li>
 <li><a target="_blank" href="http://kipid.tistory.com/entry/Access-from-other-hosts">Access from other hosts</a>, 2015-12-23</li>
 <li><a target="_blank" href="http://kipid.tistory.com/entry/Learning-Play-Framework">Learning Play Framework</a>, 2015-12-23</li>
@@ -440,6 +441,7 @@ window.history replaceState() and pushState()</li>
 <li><a target="_blank" class="emph" href="http://kipid.tistory.com/entry/%EA%B5%AD%EC%82%AC-%EC%A0%95%EB%A6%AC%ED%95%B4-%EB%86%93%EC%9D%80-%EA%B2%83">국사 정리해 놓은 것</a>, 2014-03-09</li>
 <li><a target="_blank" class="emph" href="http://kipid.tistory.com/entry/%EB%8C%80%ED%95%9C%EB%AF%BC%EA%B5%AD-%ED%97%8C%EB%B2%95-%EC%A0%84%EB%AC%B8">대한민국 헌법 전문</a>, 2014-03-06</li>
 <li><a target="_blank" href="http://kipid.tistory.com/entry/%EB%B2%95%EB%A0%B9-%ED%98%95%EB%B2%95-%EC%A0%84%EB%AC%B8">법령 - 형법 전문 (The whole script of criminal law of Korea)</a>, 2015-12-16</li>
+<li><a target="_blank" href="http://kipid.tistory.com/entry/%EB%AF%BC%EC%82%AC-%EC%86%8C%EC%86%A1%EB%B2%95-%EC%A0%84%EB%AC%B8">법령 - 민사 소송법 전문 (The whole script of Code of Civil Procedure of Korea)</a>, 2015-12-16</li>
 <li><a target="_blank" href="http://kipid.tistory.com/entry/%EC%A0%95%EB%8F%84%EC%A0%84-%EA%B4%80%EB%A0%A8-%EC%97%AD%EC%82%AC-%EC%A0%95%EB%A6%AC">정도전 관련 역사 정리</a>, 2014-06-14</li>
 </ul>
 
@@ -471,6 +473,7 @@ window.history replaceState() and pushState()</li>
 <li><a target="_blank" href="http://kipid.tistory.com/entry/%EA%B2%B0%EA%B3%BC-%EC%A7%80%EC%83%81%EC%A3%BC%EC%9D%98%EC%9D%98-%EB%A7%A4%EB%A0%A5-%EA%B3%B5%EB%A6%AC%EC%A3%BC%EC%9D%98">결과 지상주의의 매력 (공리주의?)</a>, 2015-12-19</li>
 <li><a target="_blank" href="http://kipid.tistory.com/entry/Fragmented-network-communities-Islandization-of-informations">Fragmented network/communities (Islandization of informations) :: 끼리끼리만 소통하는 우리 사회</a>, 2015-12-19</li>
 <li><a target="_blank" href="http://kipid.tistory.com/entry/%EC%A7%80%EC%8B%9D%EC%B1%84%EB%84%90e-%ED%94%84%EB%A1%9C%ED%8C%8C%EA%B0%84%EB%8B%A4-%EC%84%A0%EC%A0%84-%EC%84%A0%EB%8F%99-%EA%B1%B0%EC%A7%93%EB%A7%90-%EC%A7%84%EC%8B%A4-%EA%B7%B8-%EC%82%AC%EC%86%8C%ED%95%A8%EB%93%A4">[지식채널e] 프로파간다 - 선전, 선동, 거짓말, 진실, 그 사소함들...</a>, 2015-06-18</li>
+<li><a target="_blank" href="http://kipid.tistory.com/entry/%EB%8C%80%EC%B2%9C%EC%82%AC-%EA%B0%80%EB%B8%8C%EB%A6%AC%EC%97%98-Gabriel-Gabriele-Kabriel-and-so-on">대천사 가브리엘 (Gabriel, Gabriele, Kabriel, and so on)</a>, 2015-12-20</li>
 <li><a target="_blank" href="http://kipid.tistory.com/entry/what-is-justice">정의란 무엇인가? - 1강 벤담의 공리주의</a>, 2014-01-22</li>
 <li><a target="_blank" href="http://kipid.tistory.com/entry/Philosophy-of-Success">성공이란 무엇일까? (Philosophy of Success)</a>, 2014-03-23</li>
 <li><a target="_blank" href="http://kipid.tistory.com/entry/%EA%B3%A0%ED%86%B5%EC%97%86%EC%9D%B4-%EC%A3%BD%EB%8A%94-%EB%B0%A9%EB%B2%95-%EC%95%88%EB%9D%BD%EC%82%AC-%EB%B0%A9%EB%B2%95-%EC%9E%90%EC%82%B4%ED%95%A0-%EA%B6%8C%EB%A6%AC">고통없이 죽는 방법 (안락사 방법), 자살할 권리</a>, 2014-11-21</li>
@@ -580,6 +583,9 @@ MathJax.Hub.Config({
 
 <script>
 (function(eve, $, undefined) {
+////////////////////////////////////////////////////
+// Variables
+////////////////////////////////////////////////////
 $window=$(window);
 $out_focus=$("#out-focus");
 $fuzzy_search_container=$("#fuzzy-search-container");
@@ -634,7 +640,7 @@ eve.splitHangul=function(str) {
 			res.pCho[p]=true;
 		} else {
 			res[i]={"char":c, "splitted3":c, "splitted":c};
-			if (i>0&&/[^a-zA-Z]$/.test(res[i-1].splitted&&/[a-zA-Z]/.test(c))) {
+			if (i>0&&/[^a-zA-Z0-9]$/.test(res[i-1].splitted)&&/[a-zA-Z0-9]/.test(c)) {
 				res.pCho[p]=true;
 			}
 		}
@@ -646,35 +652,8 @@ eve.splitHangul=function(str) {
 };
 
 ////////////////////////////////////////////////////
-// Fuzzy search
+// Fuzzy search prepare
 ////////////////////////////////////////////////////
-eve.fs=[];
-eve.fs[0]=[];
-eve.fs[0]["ptnSH"]=eve.splitHangul("$!@#");
-eve.fs.fullList=[];
-var $list=$(".docuK li");
-for (var i=0;i<$list.length;i++) {
-	var $listI=$list.eq(i);
-	var $sec=$listI.parents(".docuK>.sec");
-	var txt="";
-	var html="";
-	if ($sec.exists()) {
-		var cat=$sec.find("h2:first-child .head-txt").text();
-		var $subsec=$listI.parents(".subsec");
-		if ($subsec.exists()) {
-			cat+="\n&nbsp; -- "+$subsec.find("h3:first-child .head-txt").text();
-			var $subsubsec=$listI.parents(".subsubsec");
-			if ($subsubsec.exists()) {
-				cat+="\n&nbsp; &nbsp; -- "+$subsubsec.find("h4:first-child .head-txt").text();
-			}
-		}
-		txt=cat.replace(/\n&nbsp; &nbsp;/g,"").replace(/\n&nbsp;/g,"")+"\n";
-		html='<div class="cat">'+cat.replace(/\n/g, "<br>")+'</div>';
-	}
-	txt+="* "+$listI.text();
-	html+='<div class="li">* '+$listI.html()+'</div>';
-	eve.fs.fullList[i]={i:i, "txt":eve.splitHangul(txt), "html":html, "$listI":$listI};
-}
 RegExp.quote=function(str) {
 	return str.replace(/[.?*+^$[\]\\{}()|-]/g, "\\$&").replace(/\s/g, "[\\s\\S]");
 };
@@ -737,7 +716,7 @@ eve.matchScoreFromIndices=function(strSH, ptnSH, indices) {
 	var res=0;
 	for (var i=0;i<indices.length;i++) {
 		if (strSH.pCho[indices[i].start])
-			res+=8;
+			res+=10;
 	}
 	for (var i=1;i<indices.length;i++) {
 		var diff=indices[i].start-indices[i-1].start;
@@ -749,7 +728,7 @@ eve.fuzzySearch=function(ptnSH, fs) {
 	var list=[];
 	if (ptnSH.splitted.indexOf(fs[0].ptnSH.splitted)===0) {
 		fs[1]=fs[0];
-	} else if (fs[1] && ptnSH.splitted.indexOf(fs[1].ptnSH.splitted)===0) {
+	} else if (fs[1]&&ptnSH.splitted.indexOf(fs[1].ptnSH.splitted)===0) {
 		if (ptnSH.splitted===fs[1].ptnSH.splitted) {
 			return fs[1];
 		}
@@ -822,10 +801,9 @@ eve.fuzzySearch=function(ptnSH, fs) {
 			}
 			res.push({i:list[i].i, maxMatchScore:maxMatchScore, highlight:eve.highlightStrFromIndices(txt, indicesMMS)});
 		}
-	} else {sorted=res.sorted;
+	} else {
 		res.push({i:list[i].i, maxMatchScore:0});
 	}}
-	// sorting...
 	var sorted=res.sorted=[];
 	for (var i=0;i<res.length;i++) {
 		sorted[i]=i;
@@ -839,6 +817,40 @@ eve.fuzzySearch=function(ptnSH, fs) {
 	}
 };
 
+//////////////////////////////////////////
+// Fuzzy search implementation
+//////////////////////////////////////////
+eve.previous=Date.now();
+eve.fs=[];
+eve.fs.$fs=$fuzzy_search;
+eve.fs.$fsl=$fuzzy_search_list;
+eve.fs.$fsLis=$fuzzy_search_list.find(".list-item");
+eve.fs[0]=eve.fs[1]=[];
+eve.fs[0]["ptnSH"]=eve.fs[1]["ptnSH"]=eve.splitHangul("$!@#");
+eve.fs.fullList=[];
+var $list=$(".docuK li");
+for (var i=0;i<$list.length;i++) {
+	var $listI=$list.eq(i);
+	var $sec=$listI.parents(".docuK>.sec");
+	var txt="";
+	var html="";
+	if ($sec.exists()) {
+		var cat=$sec.find("h2:first-child .head-txt").text();
+		var $subsec=$listI.parents(".subsec");
+		if ($subsec.exists()) {
+			cat+="\n&nbsp; -- "+$subsec.find("h3:first-child .head-txt").text();
+			var $subsubsec=$listI.parents(".subsubsec");
+			if ($subsubsec.exists()) {
+				cat+="\n&nbsp; &nbsp; -- "+$subsubsec.find("h4:first-child .head-txt").text();
+			}
+		}
+		txt=cat.replace(/\n&nbsp; &nbsp;/g,"").replace(/\n&nbsp;/g,"")+"\n";
+		html='<div class="cat">'+cat.replace(/\n/g, "<br>")+'</div>';
+	}
+	txt+="* "+$listI.text();
+	html+='<div class="li">* '+$listI.html()+'</div>';
+	eve.fs.fullList[i]={i:i, "txt":eve.splitHangul(txt), "html":html, "$listI":$listI};
+}
 $fuzzy_search.on("keydown", function(e) {
 	e.stopPropagation();
 	switch (e.keyCode) {
@@ -888,7 +900,7 @@ if (e&&e.srcElement&&e.srcElement.nodeName=="A") {
 } else {
 	var $elem=$(elem);
 	if ($elem.hasClass("selected")) {
-		$fuzzy_search.trigger({type:"keydown", keyCode:27}); // keyCode:27=ESC
+		$fuzzy_search.trigger({type:"keydown", keyCode:27}); // keyCode:27=ESC :: exit and focus out.
 	} else {
 		eve.$fsLis.removeClass("selected");
 		$elem.addClass("selected");
@@ -896,45 +908,44 @@ if (e&&e.srcElement&&e.srcElement.nodeName=="A") {
 	var $listI=eve.fs.fullList[k]["$listI"];
 	$window.scrollTop($listI.offset().top-window.innerHeight/3);
 }};
-eve.doFS=function() {
-	var fsPtnSH=eve.splitHangul($fuzzy_search.text());
-	if (eve.fs[0].ptnSH.splitted!==fsPtnSH.splitted) {
-		eve.fuzzySearch(fsPtnSH, eve.fs);
-		var res=eve.fs[0];
+eve.doFS=function(fs) {
+	var fsPtnSH=eve.splitHangul(fs.$fs.text());
+	if (fs[0].ptnSH.splitted!==fsPtnSH.splitted) {
+		eve.fuzzySearch(fsPtnSH, fs);
+		var res=fs[0];
 		var sorted=res.sorted;
 		var str="";
 		for (var i=0;i<sorted.length;i++) {
 			var k=res[sorted[i]].i;
 			str+='<div class="list-item" onclick="kipid.gotoLi(event,this,'+k+')">'
-					+eve.fs.fullList[k]["html"]
+					+fs.fullList[k]["html"]
 					+((res[sorted[i]]["highlight"]!==undefined)?
 					'<div class="highlighted">'+'<span class="maxMatchScore">'+res[sorted[i]].maxMatchScore+'</span> :: '+res[sorted[i]]["highlight"]+'</div>':'')
 				+'</div>';
 		}
-		$fuzzy_search_list.html(str);
-		$fuzzy_search_list.scrollTop(0);
-		eve.$fsLis=$fuzzy_search_list.find(".list-item");
+		fs.$fsl.html(str);
+		fs.$fsl.scrollTop(0);
+		fs.$fsLis=fs.$fsl.find(".list-item");
 	}
 };
-eve.previous=Date.now();
 eve.fsOn=function() {
 	var now=Date.now();
 	var passed=now-eve.previous;
 	if (passed>eve.wait) {
-		eve.doFS();
 		eve.previous=now;
+		eve.doFS(eve.fs);
 	} else {
 		$fuzzy_search.off("input.fs keyup.fs cut.fs paste.fs");
 		setTimeout(function() {
-			eve.doFS();
-			eve.previous=Date.now();
 			$fuzzy_search.on("input.fs keyup.fs cut.fs paste.fs", eve.fsOn);
+			eve.previous=Date.now();
+			eve.doFS(eve.fs);
 		}, eve.wait*1.1-passed);
 	}
 };
 $fuzzy_search.on("input.fs keyup.fs cut.fs paste.fs", eve.fsOn);
 $fuzzy_search.trigger("keyup");
-$window.on("keydown", function(e) {
+$window.on("keydown.fsf", function(e) {
 	if (e.keyCode==71) { // G = 71
 		e.preventDefault();
 		$fuzzy_search_container.show();
