--- a/Lists.html
+++ b/Lists.html
@@ -87,13 +87,10 @@
 </div>
 <div id="out-focus" class="none">out focus</div>
 
-<div class="cmt">
-
+<!-- <div class="cmt">
 다시 모든 글을 다 공개. 일자리는 나눠 갖는게 좋은걸까? 독점하는게 좋은걸까???
-
 Open source 가 좋은걸까? Closed 로 대가를 조금이라도 받고 지식을 주는게 나은걸까??? 우선은 다 open 을 할 예정... 그동안 공개하지 않고 독점하려고 했던 것들까지... 지식은 공유하면 더 발전하긴 하는듯... Open source 가 이런 매력이구만. 그런데 open source 가 문제가 아니고, Source 의 중요한 부분을 잘 설명하는 문서작성이 더 중요한거 같기도.
-
-</div>
+</div> -->
 
 <div class="cmt">
 
@@ -142,6 +139,7 @@ Fuzzy search 갤s 에서는 textarea 로 바꿔야 제대로 돌아가는듯?
 ##[.no-sec-N#sec-interest] Recent interests
 
 <ul>
+<li><a target="_blank" href="http://kipid.tistory.com/entry/%EC%A0%95%EC%8B%A0%EB%B6%84%EC%97%B4%EB%B3%91-%EC%A1%B0%ED%98%84%EB%B3%91-%EC%9D%B4%EB%9E%80">정신분열병 (조현병) 이란?</a>, 2016-02-11</li>
 <li><a target="_blank" href="http://kipid.tistory.com/entry/%EC%84%B8%EC%9B%94%ED%98%B8-%EC%B9%A8%EB%AA%B0%EC%82%AC%EA%B3%A0">세월호 침몰사고. 다이빙벨 논란. 링크 모음.</a>, 2014-04-22; 사고는 2014년 4월 16일 8시 48분 경 대한민국 전라남도 진도군 조도면 부근 황해 상에서 발생.</li>
 <li><a target="_blank" href="http://kipid.tistory.com/entry/Career-Portfolio-%EC%9D%B4%EA%B0%95%EC%88%98">Career Portfolio - 이강수</a>, 2015-12-18</li>
 <li><a target="_blank" href="http://kipid.tistory.com/entry/%EC%9D%98%EB%A3%8C-%ED%8C%8C%EC%97%85-%EA%B4%80%EB%A0%A8">의료 파업 및 의료 영리화, 원격진료. 외부에서 본 개인의견</a>, 2014-03-22</li>
@@ -158,6 +156,8 @@ Fuzzy search 갤s 에서는 textarea 로 바꿔야 제대로 돌아가는듯?
 ##[.no-sec-N#sec-Newest] Newest posts
 
 <ul>
+<li><a target="_blank" href="http://kipid.tistory.com/entry/SturmLiouville-and-Completeness-Theory">Sturm-Liouville and Completeness Theory</a>, 2015-12-12</li>
+<li><a target="_blank" href="http://kipid.tistory.com/entry/%EC%A0%95%EC%8B%A0%EB%B6%84%EC%97%B4%EB%B3%91-%EC%A1%B0%ED%98%84%EB%B3%91-%EC%9D%B4%EB%9E%80">정신분열병 (조현병) 이란?</a>, 2016-02-11</li>
 <li><a target="_blank" href="http://kipid.tistory.com/entry/Two-track-stragedy-%EC%96%91-%EB%B0%A9%ED%96%A5-%EC%A0%84%EB%9E%B5">Two track stragedy (양 방향 전략)</a> Many track stragedy 로도 확장이 가능할듯?, 2015-12-24</li>
 <li><a target="_blank" href="http://kipid.tistory.com/entry/%EB%AC%B8%EC%9E%AC%EC%9D%B8-2012-%EB%8C%80%ED%86%B5%EB%A0%B9-%EC%B6%9C%EB%A7%88-%EC%84%A0%EC%96%B8-%EB%B6%88%EB%B9%84%EB%B6%88%EB%AA%85%E4%B8%8D%E9%A3%9B%E4%B8%8D%E9%B3%B4">문재인 2012 대통령 출마 선언: 불비불명(不飛不鳴)</a>, 2015-12-23</li>
 <li><a target="_blank" href="http://kipid.tistory.com/entry/%ED%99%94%EC%84%B1%EC%8B%9C-%EC%B6%95%EA%B5%AC%EC%9E%A5-%ED%99%94%EC%84%B1-%EC%A2%85%ED%95%A9-%EA%B2%BD%EA%B8%B0-%ED%83%80%EC%9A%B4-%EC%A3%BC%EB%B3%80-%EB%AA%A8%EC%8A%B5%EB%93%A4">화성시 축구장 (화성 종합 경기 타운) 주변 모습들</a>, 2015-12-23</li>
@@ -166,32 +166,6 @@ Fuzzy search 갤s 에서는 textarea 로 바꿔야 제대로 돌아가는듯?
 <li><a target="_blank" href="http://kipid.tistory.com/entry/%EB%AF%BC%EC%A3%BC%EC%A3%BC%EC%9D%98-%EC%82%AC%ED%9A%8C%EC%97%90%EC%84%9C-%EC%95%A0%EA%B5%AD%EC%8B%AC%EC%9D%B4%EB%9E%80-%EB%AC%B4%EC%97%87%EC%9D%B8%EA%B0%80">민주주의 사회에서 애국심이란 무엇인가?</a>, 2015-12-23</li>
 <li><a target="_blank" href="http://kipid.tistory.com/entry/%EA%B1%B0%EC%A7%93%EA%B8%B0%EC%96%B5-%EC%8B%A0%EB%93%9C%EB%A1%AC-False-Memory-Syndrome">거짓기억 신드롬 (False Memory Syndrome)</a>, 2015-12-22</li>
 <li><a target="_blank" href="http://kipid.tistory.com/entry/%ED%98%91%EB%8F%99%EC%9D%98-%EC%A7%84%ED%99%94-Evolution-of-Cooperation">협동의 진화 (Evolution of Cooperation)</a>, 2015-12-22</li>
-<li><a target="_blank" href="http://kipid.tistory.com/entry/%EB%8C%80%EC%B2%9C%EC%82%AC-%EA%B0%80%EB%B8%8C%EB%A6%AC%EC%97%98-Gabriel-Gabriele-Kabriel-and-so-on">대천사 가브리엘 (Gabriel, Gabriele, Kabriel, and so on)</a>, 2015-12-20</li>
-<li><a target="_blank" href="http://kipid.tistory.com/entry/Recoevenet-%EC%84%A4%EB%AA%85%EC%84%9C-Guide-to-Recoevenet">Recoeve.net 설명서 (Guide to Recoeve.net)</a>, 2015-12-19</li>
-<li><a target="_blank" href="http://kipid.tistory.com/entry/%EB%B0%94%EB%82%98%EB%82%98-%ED%81%AC%EB%A0%88%EC%9D%B4%EC%A7%80-Popup-Store-with-%ED%95%98%EB%9D%BC%EA%B5%AC">바나나 크레이지 :: Pop-up Store (with 하라구)</a>, 2015-12-19</li>
-<li><a target="_blank" href="http://kipid.tistory.com/entry/%EA%B2%B0%EA%B3%BC-%EC%A7%80%EC%83%81%EC%A3%BC%EC%9D%98%EC%9D%98-%EB%A7%A4%EB%A0%A5-%EA%B3%B5%EB%A6%AC%EC%A3%BC%EC%9D%98">결과 지상주의의 매력 (공리주의?)</a>, 2015-12-19</li>
-<li><a target="_blank" href="http://kipid.tistory.com/entry/%EC%96%91%EC%9E%90%EC%97%AD%ED%95%99-conjecture-%EC%B8%A1%EC%A0%95%EB%AC%B8%EC%A0%9C-%EB%8B%A4%EC%A4%91-%EC%9A%B0%EC%A3%BC%EB%A1%A0%EA%B3%BC-%EC%9E%90%EC%9C%A0%EC%9D%98%EC%A7%80%EC%9D%98-%EC%83%81%EA%B4%80%EA%B4%80%EA%B3%84">양자역학 conjecture :: 측정문제. 다중 우주론과 자유의지의 상관관계?</a>, 2015-12-19</li>
-<li><a class="emph" target="_blank" href="http://kipid.tistory.com/entry/%EA%B3%B5%EC%A0%95%ED%95%9C-%EA%B2%BD%EC%A0%9C%EB%9E%80-%EB%AC%B4%EC%97%87%EC%9D%BC%EA%B9%8C-2-%EC%95%85%EB%A7%88%EC%9D%98-%EB%93%B1%EC%9E%A5-%EC%9D%B4%EC%9E%90-interest-%EA%B0%9C%EB%85%90">공정한 경제란 무엇일까? - 2. 악마의 등장 : 이자 (interest) 개념</a>, 2015-12-19</li>
-<li><a target="_blank" href="http://kipid.tistory.com/entry/Fragmented-network-communities-Islandization-of-informations">Fragmented network/communities (Islandization of informations) :: 끼리끼리만 소통하는 우리 사회</a>, 2015-12-19</li>
-<li><a target="_blank" href="http://kipid.tistory.com/entry/%EB%B6%80%EC%B1%84%EC%A3%BC%EB%8F%84-%EC%84%B1%EC%9E%A5%EC%97%90%EC%84%9C-%EC%86%8C%EB%93%9D%EC%A3%BC%EB%8F%84-%EC%84%B1%EC%9E%A5%EC%9C%BC%EB%A1%9C">부채주도 성장에서 소득주도 성장으로</a>, 2015-12-18</li>
-<li><a target="_blank" href="http://kipid.tistory.com/entry/%EB%AF%BC%EC%82%AC-%EC%86%8C%EC%86%A1%EB%B2%95-%EC%A0%84%EB%AC%B8">민사 소송법 전문 (The whole script of Code of Civil Procedure of Korea)</a>, 2015-12-18</li>
-<li><a target="_blank" href="http://kipid.tistory.com/entry/Conjecture-about-the-Unification-between-ElectroMagnetic-Lorentz-force-and-Gravity">Conjecture about the Unification between Electro-Magnetic Lorentz force and Gravity</a>, 아이디어 자체는 2005년쯤? 구체화는 2006 졸업논문때.</li>
-<li><a target="_blank" href="http://kipid.tistory.com/entry/Recoeve-progress">Recoeve progress</a></li>
-<li><a target="_blank" href="http://kipid.tistory.com/entry/Career-Portfolio-%EC%9D%B4%EA%B0%95%EC%88%98">Career Portfolio - 이강수</a>, 2015-12-18</li>
-<li><a target="_blank" href="http://kipid.tistory.com/entry/%EB%B2%95%EB%A0%B9-%ED%98%95%EB%B2%95-%EC%A0%84%EB%AC%B8">법령 - 형법 전문 (The whole script of criminal law of Korea)</a>, 2015-12-16</li>
-<li><a target="_blank" href="http://kipid.tistory.com/entry/Site-statistics-MAU-DAU">Site statistics (MAU, DAU)</a>, 2015-12-16</li>
-<li><a target="_blank" href="http://kipid.tistory.com/entry/%EC%82%AC%EB%9E%8C%EB%93%A4%EC%9D%98-%ED%8F%89%EA%B7%A0%EC%A0%81%EC%9D%B8-%EC%86%8C%EB%B9%84%EA%B5%AC%EC%A1%B0">사람들의 평균적인 소비구조</a>, 2015-12-15</li>
-<li><a target="_blank" href="http://kipid.tistory.com/entry/Internet-Web-Advertisement">인터넷 광고 시장에 관하여...</a>, 2015-12-15</li>
-<li><a target="_blank" href="http://kipid.tistory.com/entry/JAVA-SE-8-API-index-with-Fuzzy-Search">JAVA SE 8 - API - index with Fuzzy Search</a>, 2015-12-15</li>
-<li><a target="_blank" href="http://kipid.tistory.com/entry/The-Richest-People-On-The-Planet">세계 최상위 부자들 (The Richest People On The Planet)</a>, 2015-12-15</li>
-<li><a target="_blank" href="http://kipid.tistory.com/entry/%EB%85%B8%EB%AC%B4%ED%98%84-%EB%8C%80%ED%86%B5%EB%A0%B9%EC%9D%98-%EC%95%84%EB%A6%84%EB%8B%A4%EC%9A%B4-%EA%B7%B8%EB%A6%BC%EC%9E%90-%EB%AC%B8%EC%9E%AC%EC%9D%B8-%EB%B9%84%EC%84%9C%EC%8B%A4%EC%9E%A5">노무현 대통령의 아름다운 그림자, 문재인 비서실장</a>, 2015-12-14</li>
-<li><a target="_blank" href="http://kipid.tistory.com/entry/Development-of-Virtual-Reality">가상 현실 (VR : Virtual Reality) 개발</a>, 2015-12-14</li>
-<li><a target="_blank" href="http://kipid.tistory.com/entry/%EC%95%88%EC%B2%A0%EC%88%98%EC%94%A8-%EA%B8%B0%EB%B6%80%EA%B3%BC%EC%A0%95%EA%B3%BC-%EC%95%88%EB%9E%A9-%EC%A3%BC%EC%A3%BC%EB%93%A4%EC%9D%98-%EA%B1%B0%EB%9E%98%EB%82%B4%EC%97%AD">안철수씨 기부과정과 안랩 주주들의 거래내역</a>, 2015-12-14</li>
-<li><a target="_blank" href="http://kipid.tistory.com/entry/Programmer-Developers-Portfolio">Programmer/Developer's Portfolio (개발자/프로그래머의 포트폴리오)</a>, 2015-12-14</li>
-<li><a target="_blank" href="http://kipid.tistory.com/entry/%ED%95%9C%EA%B5%AD%EC%A0%95%EB%B6%80%EC%9D%98-%EC%97%AD%EC%82%AC%EA%B5%90%EA%B3%BC%EC%84%9C-%EA%B5%AD%EC%A0%95%ED%99%94-%EC%B2%A0%ED%9A%8C%EB%A5%BC-%EC%9C%84%ED%95%9C-%EC%B2%AD%EC%9B%90%EC%84%9C-by-%EA%B5%AD%EC%A0%95%EA%B5%90%EA%B3%BC%EC%84%9C%EB%B0%98%EB%8C%80-%EC%B2%AD%EC%86%8C%EB%85%84%ED%96%89%EB%8F%99">한국정부의 역사교과서 국정화 철회를 위한 청원서 by 국정교과서반대 청소년행동</a>, 2015-12-13</li>
-<li><a target="_blank" href="http://kipid.tistory.com/entry/%EC%8B%A4%EC%8B%9C%EA%B0%84-HTTP-%EC%96%91%EB%B0%A9%ED%96%A5-%ED%86%B5%EC%8B%A0">실시간 HTTP 양방향 통신 (Web socket, Polling, Long-polling, and so on)</a>, 2015-12-12</li>
-<li><a target="_blank" href="http://kipid.tistory.com/entry/specific-event-handler-on-HTML-element">Specific event handler on HTML element?</a>, 2015-12-12</li>
-<li><a target="_blank" href="http://kipid.tistory.com/entry/HTTP-Server-side-Frameworks-Languages">HTTP Server-side Frameworks/Languages 뭘 써야할까?</a>, 2015-12-12</li>
 </ul>
 
 
@@ -250,6 +224,7 @@ Fuzzy search 갤s 에서는 textarea 로 바꿔야 제대로 돌아가는듯?
 <ul>
 <li><a target="_blank" class="emph" href="http://kipid.tistory.com/entry/Method-of-Lagrange-multipliers">Method of Lagrange multipliers (English)</a>, 2014-03-21; and <a target="_blank" class="emph" href="http://kipid.tistory.com/entry/Optimization-with-the-Method-of-Lagrange-multipliers">최적화, 라그랑지 승수법 (Optimization with the Method of Lagrange multipliers)</a>, 2014-03-18; 앞쪽의 영어버전이 더 자세히 작성되어 있음.</li>
 <li><a target="_blank" class="emph" href="http://kipid.tistory.com/entry/Linear-Algebra">선형 대수학 간단한 정리들 (Linear Algebra)</a>, 2014-03-18</li>
+<li><a target="_blank" href="http://kipid.tistory.com/entry/SturmLiouville-and-Completeness-Theory">Sturm-Liouville and Completeness Theory</a>, 2015-12-12</li>
 <li><a target="_blank" href="http://kipid.tistory.com/entry/Dirac-delta-function">디락 델타 함수 (Dirac delta function)</a>, 2014-02-13</li>
 <li><a target="_blank" href="http://kipid.tistory.com/entry/Proof-of-Geometrization-and-Poincar%C3%A9-conjectures-by-Grigori-Perelman">Proof of Geometrization and Poincaré conjectures, by Grigori Perelman</a>, 2015-07-18</li>
 </ul>
@@ -470,6 +445,7 @@ window.history replaceState() and pushState()</li>
 ###[#sec-Society] 사회
 
 <ul>
+<li><a target="_blank" href="http://kipid.tistory.com/entry/%EC%A0%95%EC%8B%A0%EB%B6%84%EC%97%B4%EB%B3%91-%EC%A1%B0%ED%98%84%EB%B3%91-%EC%9D%B4%EB%9E%80">정신분열병 (조현병) 이란?</a>, 2016-02-11</li>
 <li><a target="_blank" href="http://kipid.tistory.com/entry/%EA%B2%B0%EA%B3%BC-%EC%A7%80%EC%83%81%EC%A3%BC%EC%9D%98%EC%9D%98-%EB%A7%A4%EB%A0%A5-%EA%B3%B5%EB%A6%AC%EC%A3%BC%EC%9D%98">결과 지상주의의 매력 (공리주의?)</a>, 2015-12-19</li>
 <li><a target="_blank" href="http://kipid.tistory.com/entry/Fragmented-network-communities-Islandization-of-informations">Fragmented network/communities (Islandization of informations) :: 끼리끼리만 소통하는 우리 사회</a>, 2015-12-19</li>
 <li><a target="_blank" href="http://kipid.tistory.com/entry/%EC%A7%80%EC%8B%9D%EC%B1%84%EB%84%90e-%ED%94%84%EB%A1%9C%ED%8C%8C%EA%B0%84%EB%8B%A4-%EC%84%A0%EC%A0%84-%EC%84%A0%EB%8F%99-%EA%B1%B0%EC%A7%93%EB%A7%90-%EC%A7%84%EC%8B%A4-%EA%B7%B8-%EC%82%AC%EC%86%8C%ED%95%A8%EB%93%A4">[지식채널e] 프로파간다 - 선전, 선동, 거짓말, 진실, 그 사소함들...</a>, 2015-06-18</li>
@@ -902,7 +878,7 @@ if (e&&e.srcElement&&e.srcElement.nodeName=="A") {
 	if ($elem.hasClass("selected")) {
 		$fuzzy_search.trigger({type:"keydown", keyCode:27}); // keyCode:27=ESC :: exit and focus out.
 	} else {
-		eve.$fsLis.removeClass("selected");
+		eve.fs.$fsLis.removeClass("selected");
 		$elem.addClass("selected");
 	}
 	var $listI=eve.fs.fullList[k]["$listI"];
