--- a/skin.html
+++ b/skin.html
@@ -23,6 +23,10 @@
 		</div><!-- header -->
 		<div id="wrapContent">
 			<div id="content">
+				<!-- ad_responsible -->
+				<!-- <div style="text-align:center; margin:1em auto">
+					<ins class="adsbygoogle" style="display:block" data-ad-client="ca-pub-9843810906985249" data-ad-slot="1288245819" data-ad-format="auto"></ins>
+				</div> -->
 				<s_list>
 				<div id="searchList" class="nonEntry">
 					<h3>'[##_list_conform_##]'에 해당되는 글 [##_list_count_##]건</h3>
@@ -468,6 +472,7 @@
 						</s_rcttb_rep>
 					</ul>
 				</div>
+				<!-- ad1 -->
 				</s_sidebar_element>
 				
 				<s_sidebar_element>
@@ -535,8 +540,12 @@
 				<div id="btnRSS">
 					<a href="[##_rss_url_##]" onclick="window.open(this.href); return false"><img src="./images/btn_rss.gif" alt="rss"/></a>
 				</div>
+				<div style="text-align:center; margin:1em auto">
+					<ins class="adsbygoogle" style="display:inline-block;width:300px;height:600px" data-ad-client="ca-pub-9843810906985249" data-ad-slot="4939716216"></ins>
+				</div>
 				</s_sidebar_element>
 				</s_sidebar>
+				
 			</div><!-- sidebar -->
 			<div class="clear"></div>
 			<hr />
@@ -557,7 +566,15 @@
 		</div>
 	</div>
 </s_t3>
+<script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 <script>
+(adsbygoogle = window.adsbygoogle || []).push({});
+(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+})(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+ga('create', 'UA-75243424-1', 'auto');
+ga('send', 'pageview');
+
 window.kipid=window.kipid||{};
 if (kipid.processShortKey===undefined) {
 	kipid.processShortKey=function(event) {
